# AI2Pot-cli

./: .gitignore  README.md  pyproject.toml
ai2pot_cli/: __init__.py  commands.py  main.py  menu.py  train.py
ai2pot_cli/menus/: doctor_menu.py  eval_menu.py  plot_menu.py  train_menu.py
ai2pot_cli/menus/install/: install_lammps.py  install_pypi.py  install_source.py  router.py
ai2pot_cli/menus/postprocessing/: plot_descriptors.py  plot_parity.py  plot_trainlog.py  serialize_model.py
ai2pot_cli/menus/potential_train/: __init__.py  mtp_train_input.py  nep_train_input.py
ai2pot_cli/menus/preprocessing/: analyse_nblist.py  convert_dataset.py  standardize_extxyz.py
ai2pot_cli/menus/preprocessing/converters/: __init__.py  abacus2xyz.py  castep2exyz.py  cp2k2xyz.py  dp2xyz.py  orca2xyz.py  siesta2xyz.py  vasp2xyz.py
ai2pot_cli/templates/: mtp_train.jsonc  nep_train.json  nep_train.jsonc
test/test_data/: C.xyz  Li.xyz  train_m.xyz
